# CV-Project-Client

./: .gitignore  README.md  character_runtime.py  character_workbench.py  config.json  memory_runtime.py  pet.py  plan.md  pyproject.toml
Murasame/: generate.py  macos_window.py  paths.py  utils.py
character_cards/: 雪乃_local-a06e006f092f.json  雪依_local-c534a1873a89.json
docs/: app.js  index.html  styles.css
scripts/: desktop_tools.py  pet_api.py  pet_workers.py
scripts/workbench/: generator.py
ui/: character_workbench.css  character_workbench.html  character_workbench.js
