[project]
name = "murasame-pet-client"
version = "0.1.0"
description = "MurasamePet desktop client"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python==4.11.0.86",
    "Pillow==11.3.0",
    "mem0ai",
    "pyautogui==0.9.54",
    "PyQt5==5.15.11",
    "PyQtWebEngine==5.15.7",
    "PyQt5_sip==12.17.0",
    "requests==2.32.5",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[tool.hatch.build.targets.wheel]
packages = ["Murasame"]
